applications/todo-app/kustomize/postgresql/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-postgresql
  labels:
    app.kubernetes.io/name: todo-postgresql
spec:
  to:
    kind: Service
    name: todo-postgresql
    weight: 100
  port:
    targetPort: todo-postgresql
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
